--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewpoint" content="width=device-width, initial-scale=10">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Mojalefa Obed Mohlamonyane</title>
     </head>
     <body>
@@ -26,11 +27,13 @@
         <main id="main">
             <section id="section-a" class="grid">
                 <div class="content wrap">
-                    <h2 class="content-title">Skills</h2>
+                    <h2 class="content-title">My Skills</h2>
+                    <div class="content-text">
                     <p>I do web applications and mobile application development.
                          I have knowledge on the following: html, css, sql, php, java, c++, c, linux, git, 
                          API gateway, Amazon Lambda, DynamoDB, Amazon Lex, S3 and cloudfornt CDN.
                     </p>
+                    </div>
                 </div>
             </section>
 
@@ -39,28 +42,22 @@
                     <li>
                         <div class="card">
                             <img src="img/img_1.jpg" alt="">
-                            <div class="card-content">web development</div>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                                 Quis obcaecati nihil aspernatur quibusdam inventore exercitationem optio officiis, 
-                                 similique perferendis asperiores?</p>
+                            <div class="card-content">web project</div>
+                            <p>project description</p>
                         </div>
                     </li>
                     <li>
                         <div class="card">
                             <img src="img/img_1.jpg" alt="">
-                            <div class="card-content">Mobile Development</div>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                                 Quis obcaecati nihil aspernatur quibusdam inventore exercitationem optio officiis, 
-                                 similique perferendis asperiores?</p>
+                            <div class="card-content">Mobile Development project</div>
+                            <p>project description</p>
                         </div>
                     </li>
                     <li>
                         <div class="card">
                             <img src="img/img_1.jpg" alt="">
-                            <div class="card-content">Design Thinking</div>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                                 Quis obcaecati nihil aspernatur quibusdam inventore exercitationem optio officiis, 
-                                 similique perferendis asperiores?</p>
+                            <div class="card-content">Design Thinking project</div>
+                            <p>project description</p>
                         </div>
                     </li>
                 </ul>
@@ -76,9 +73,9 @@
             <section id="section-d" class="grid">
                 <div class="box">
                     <h2 class="content-title">Connect with me</h2>
-                    <a class="btn-social" href="https://twitter.com/mj_obed"><i class="twitter"></i></a>
-                    <a class="btn-social" href="https://za.linkedin.com/in/mojalefa-obed-5374249a"><i class="linkedin-in"></i></a>
-                    <a class="btn-social" href="https://github.com/mojalefamj"><i class="github"></i></a>
+                    <a href="https://twitter.com/mj_obed" class="fa fa-twitter" target="_blank"></a>
+                    <a href="https://za.linkedin.com/in/mojalefa-obed-5374249a" class="fa fa-linkedin" target="_blank"></a>
+                    <a href="https://github.com/mojalefamj" class="fa fa-github" target="_blank"></i></a>
                     <p>mojalefaobed@yahoo.com</p>
                 </div>
             </section>
