--- a/index.html
+++ b/index.html
@@ -29,10 +29,24 @@
                 <div class="content wrap">
                     <h2 class="content-title">My Skills</h2>
                     <div class="content-text">
-                    <p>I do web applications and mobile application development.
-                         I have knowledge on the following: html, css, sql, php, java, c++, c, linux, git, 
-                         API gateway, Amazon Lambda, DynamoDB, Amazon Lex, S3 and cloudfornt CDN.
-                    </p>
+                    <center>
+                    <ul>
+                        <li>html</li>
+                        <li>css</li>
+                        <li>sql</li>
+                        <li>php</li>
+                        <li>java</li>
+                        <li>c++,</li>
+                        <li>c</li>
+                        <li>linux</li>
+                        <li>API gateway</li>
+                        <li>Amazon Lambda</li>
+                        <li>DynamoDB</li>
+                        <li>Amazon Lex</li>
+                        <li>S3</li>
+                        <li>cloudfornt CDN</li>
+                    </ul>
+                    </center>
                     </div>
                 </div>
             </section>
