--- a/index.html
+++ b/index.html
@@ -26,27 +26,26 @@
 
         <main id="main">
             <section id="section-a" class="grid">
-                <div class="content wrap">
+                <div class="content wrap" style="margin: 0 auto; font-weight: bold">
                     <h2 class="content-title">My Skills</h2>
                     <div class="content-text">
-                    <center>
-                    <ul>
-                        <li>html</li>
-                        <li>css</li>
-                        <li>sql</li>
-                        <li>php</li>
-                        <li>java</li>
-                        <li>c++,</li>
-                        <li>c</li>
-                        <li>linux</li>
-                        <li>API gateway</li>
-                        <li>Amazon Lambda</li>
-                        <li>DynamoDB</li>
-                        <li>Amazon Lex</li>
-                        <li>S3</li>
-                        <li>cloudfornt CDN</li>
-                    </ul>
-                    </center>
+                        <ul>
+                            <li>Html</li>
+                            <li>Css</li>
+                            <li>Sql</li>
+                            <li>PhP</li>
+                            <li>Java</li>
+                            <li>C++</li>
+                            <li>C</li>
+                            <li>linux</li>
+                            <li>API gateway</li>
+                            <li>Amazon Lambda</li>
+                            <li>DynamoDB</li>
+                            <li>Amazon Lex</li>
+                            <li>S3</li>
+                            <li>Cloudfornt CDN</li>
+                        </ul>
+
                     </div>
                 </div>
             </section>
