--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
                     <h2 class="content-title">My Skills</h2>
                     <div class="content-text">
                         <ul>
-                            <li>Html</li>
-                            <li>Css</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
                             <li>Sql</li>
-                            <li>PhP</li>
+                            <li>PHP</li>
                             <li>Java</li>
                             <li>C++</li>
                             <li>C</li>
-                            <li>linux</li>
+                            <li>Linux</li>
                             <li>API gateway</li>
                             <li>Amazon Lambda</li>
                             <li>DynamoDB</li>
@@ -45,7 +45,6 @@
                             <li>S3</li>
                             <li>Cloudfornt CDN</li>
                         </ul>
-
                     </div>
                 </div>
             </section>
