--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <section id="section-c" class="grid">
                 <div class="content-wrap">
                     <h2 class="content-title">I can handle anything code</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere, placeat?</p>
+                    <p>"Not just cool software but software that improve people's lives" <br> Mojalefa</p>
                 </div>
             </section>
 
