--- a/index.html
+++ b/index.html
@@ -1,99 +1,94 @@
 <!DOCTYPE html>
-<html lang="en>">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewpoint" content="width=device-width, initial-scale=10">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <title>Mojalefa Obed Mohlamonyane</title>
+        <meta http-equiv="X_UA_Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Meanwhile</title>
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <header id="showcase" class="grid">
-            <div class="bg-image"></div>
-            <div class="content-wrap">
-            <h1>Welcome</h1>
-            <p>I am Mojalefa Mohlamonyane, a vibrant computer geek and a software developer.
-                 I studied National Diploma in IT at Tshwane University of Technology (not completed)
-                 and took various courses online to uplift my skills and knowledge. I hold a certificate of Android mobile development,
-                 and an Amazon AWS fundamentals qualification.
-                 I do consultancy work in my neighborhood helping clients with anything computers, 
-                 advice, support, and technical stuff. Besides IT I spend my time playing music with a band 
-                 and playing video games. I am a researcher, hard worker, team player and very energetic at tackling 
-                 challenges and helping other people get through challenges. A problem solver by birth.<br> I love music!</p>
-                </div>
-        </header>
-
-        <main id="main">
-            <section id="section-a" class="grid">
-                <div class="content wrap" style="margin: 0 auto; font-weight: bold">
-                    <h2 class="content-title">My Skills</h2>
-                    <div class="content-text">
-                        <ul>
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>Sql</li>
-                            <li>PHP</li>
-                            <li>Java</li>
-                            <li>C++</li>
-                            <li>C</li>
-                            <li>Linux</li>
-                            <li>API gateway</li>
-                            <li>Amazon Lambda</li>
-                            <li>DynamoDB</li>
-                            <li>Amazon Lex</li>
-                            <li>S3</li>
-                            <li>Cloudfornt CDN</li>
-                        </ul>
+        <div class="section" id="home" data-label="Home"></div>
+        <div class="section" id="about" data-label="About Us">
+            <h1>Creative solutions for <br> bussiness problems. Simple</h1>
+            <p>We're an independent creative network with a Capetonian heritage, Johannesbug <br> HQ and global footprint. 
+                Our work is smart, simple and effective; our team is young <br> 
+                and fresh and our value-chain vertically intergrated, meaning clients come for the <br> 
+                thinking and stay for the value.
+                This is Business Art.
+            </p>
+        </div>
+        <div class="section" id="clients" data-label="Clients">
+            <ul class="client-list">
+                <li>
+                    <div class="brand-box">
+                        <img src="img/clients/01.png" class="opac-img">
                     </div>
-                </div>
-            </section>
-
-            <section id="section-b" class="grid">
-                <ul>
-                    <li>
-                        <div class="card">
-                            <img src="img/img_1.jpg" alt="">
-                            <div class="card-content">web project</div>
-                            <p>project description</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="card">
-                            <img src="img/img_1.jpg" alt="">
-                            <div class="card-content">Mobile Development project</div>
-                            <p>project description</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="card">
-                            <img src="img/img_1.jpg" alt="">
-                            <div class="card-content">Design Thinking project</div>
-                            <p>project description</p>
-                        </div>
-                    </li>
-                </ul>
-            </section>
-
-            <section id="section-c" class="grid">
-                <div class="content-wrap">
-                    <h2 class="content-title">I can handle anything code</h2>
-                    <p>"Not just cool software but software that improve people's lives" <br> Mojalefa</p>
-                </div>
-            </section>
-
-            <section id="section-d" class="grid">
-                <div class="box">
-                    <h2 class="content-title">Connect with me</h2>
-                    <a href="https://twitter.com/mj_obed" class="fa fa-twitter" target="_blank"></a>
-                    <a href="https://za.linkedin.com/in/mojalefa-obed-5374249a" class="fa fa-linkedin" target="_blank"></a>
-                    <a href="https://github.com/mojalefamj" class="fa fa-github" target="_blank"></i></a>
-                    <p>mojalefaobed@yahoo.com</p>
-                </div>
-            </section>
-        </main>
-        <footer id="main-footer" class="grid">
-            <div><small>Copyright © mojalefamj 2021</small></div>
+                </li>
+                <li>
+                    <div class="brand-box">
+                        <img src="img/clients/02.png" class="opac-img">
+                    </div>
+                </li>
+                <li>
+                    <div class="brand-box">
+                        <img src="img/clients/03.png" class="opac-img">
+                    </div>
+                </li>
+                <li>
+                    <div class="brand-box">
+                        <img src="img/clients/04.png" class="opac-img">
+                    </div>
+                </li>
+                <li>
+                    <div class="brand-box">
+                        <img src="img/clients/05.png" class="opac-img">
+                    </div>
+                </li>
+                <li>
+                    <div class="brand-box">
+                        <img src="img/clients/06.png" class="opac-img">
+                    </div>
+                </li>
+                <li>
+                    <div class="brand-box">
+                        <img src="img/clients/07.png" class="opac-img">
+                    </div>
+                </li>
+                <li>
+                    <div class="brand-box">
+                        <img src="img/clients/08.png" class="opac-img">
+                    </div>
+                </li>
+                <li>
+                    <div class="brand-box">
+                        <img src="img/clients/09.png" class="opac-img">
+                    </div>
+                </li>
+                <li>
+                    <div class="brand-box">
+                        <img src="img/clients/10.png" class="opac-img">
+                    </div>
+                </li>
+                <li>
+                    <div class="brand-box">
+                        <img src="img/clients/11.png" class="opac-img">
+                    </div>
+                </li>
+                <li>
+                    <div class="brand-box">
+                        <img src="img/clients/12.png" class="opac-img">
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="section" id="work" data-label="Work">work</div>
+        <div class="section" id="contact" data-label="Contact">contact</div>
+        <script src="script.js"></script>
+        <footer>
+            <div class="outer-footer">
+                &copy; Meanwhile a product of SRL Holdings PTY ltd. All right reserved.
+            </div>
         </footer>
     </body>
 </html>
