--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <div class="section" id="home" data-label="Home"></div>
-        <div class="section" id="about" data-label="About Us">
+        <div class="section" id="home" data-label="Home">Home</div>
+        <div class="section" id="about" data-label="About">about
+            <div class="logo">
+                <img src="img/logo_TopLeft.png" align="right">
+            </div>
             <h1>Creative solutions for <br> bussiness problems. Simple</h1>
             <p>We're an independent creative network with a Capetonian heritage, Johannesbug <br> HQ and global footprint. 
                 Our work is smart, simple and effective; our team is young <br> 
@@ -18,7 +21,10 @@
                 This is Business Art.
             </p>
         </div>
-        <div class="section" id="clients" data-label="Clients">
+        <div class="section" id="clients" data-label="Clients">clients
+            <div class="logo">
+                <img src="img/logo_TopLeft.png" align="right">
+            </div>
             <ul class="client-list">
                 <li>
                     <div class="brand-box">
@@ -82,8 +88,30 @@
                 </li>
             </ul>
         </div>
-        <div class="section" id="work" data-label="Work">work</div>
-        <div class="section" id="contact" data-label="Contact">contact</div>
+        <div class="section" id="work" data-label="Work">work
+            <div class="logo">
+                <img src="img/logo_TopLeft.png" align="right">
+            </div>
+        </div>
+        <div class="section" id="contact" data-label="Contact">contact
+            <div class="logo">
+                <img src="img/logo_TopLeft.png" align="right">
+            </div>
+            <center>
+            <ul class="contact-list">
+                <li>
+                    <div class="icon-box">
+                        <img src="img/Icon2.png" class="opac-img">
+                    </div>
+                </li>
+                <li>
+                    <div class="icon-box">
+                        <img src="img/Icon1.png" class="opac-img">
+                    </div>
+                </li>
+            </ul>
+        </center>
+        </div>
         <script src="script.js"></script>
         <footer>
             <div class="outer-footer">
