--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <div class="section" id="home" data-label="Home">Home</div>
+        <div class="section" id="home" data-label="Home"></div>
         <div class="section" id="about" data-label="About">about
             <div class="logo">
                 <img src="img/logo_TopLeft.png" align="right">
