--- a/landing.html
+++ b/landing.html
@@ -21,7 +21,7 @@
 
 
 <div id="main">
-    <h1 class="Welcome"><span>W</span>elcome Ntombi</h1>
+    <h1 class="Welcome"><span>W</span>elcome</h1>
     <div class="slogan">
         <h2>Digi<span>Fy</span></h2>
     </div>
